# bg3-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: authoring-notes.md  baseline.md  data-release.md  mod-authoring.md  plan.md  release-checklist.md  retail-testing.md
docs/releases/: 0.2.0.md
scripts/: build_data_release.py  check_release_artifact.py  wiring_survey.py
src/bg3forge/: __init__.py  _paths.py  authoring.py  benchmark.py  doctor.py  game.py  lint.py  locate.py  lookup.py  models.py  validate.py
src/bg3forge/assets/: __init__.py  atlases.py  icons.py
src/bg3forge/cli/: __init__.py  main.py
src/bg3forge/exporters/: __init__.py  base.py  csv.py  json.py  markdown.py  sqlite.py  yaml.py
src/bg3forge/pak/: __init__.py  extractor.py  format.py  lz4compat.py  patches.py  reader.py  writer.py
src/bg3forge/parsers/: __init__.py  classdescriptions.py  dialogs.py  equipment.py  goals.py  journal.py  localization.py  lsf.py  lsj.py  lsx.py  meta.py  osiris.py  progressions.py  races.py  resource.py  roottemplates.py  spelllists.py  stats.py  tags.py  treasure.py
tests/: conftest.py  test_authoring.py  test_characters.py  test_cli.py  test_data_release.py  test_diagnostics.py  test_dialogs.py  test_doctor.py  test_exporters.py  test_game.py  test_icons.py  test_journal.py  test_lint.py  test_lookup.py  test_lsf.py  test_lsj.py  test_osiris.py  test_pak.py  test_parsers.py  test_readme.py  test_scripts.py
